@@ -1,0 +1,9 @@
+DROP TABLE set_bucketing_test;
+
+CREATE TABLE set_bucketing_test (key INT, value STRING) CLUSTERED BY (key) INTO 10 BUCKETS;
+DESCRIBE EXTENDED set_bucketing_test;
+
+ALTER TABLE set_bucketing_test NOT CLUSTERED;
+DESCRIBE EXTENDED set_bucketing_test;
+
+DROP TABLE set_bucketing_test;
